# riothack

./: LICENSE  main.py  pyproject.toml  readme.md
experiments/: get_match_dates.py  get_match_ids.py  notes.md  szge_match_ids.json
experiments/common_complaints/: categorized_reviews.json  metacritic_raw.txt  review_analysis.py  reviews.json  structure.py  visualize.py
experiments/download_matches/: get_match_dates.py  get_match_ids.py  github.html
experiments/mcp/: lol_wiki.py  lol_wiki_test.py  mcp.md  notes.md  server.py
experiments/mcp/dragontail_data/: champion.json  runesReforged.json
experiments/s3/: notes.md  opensearch_utils.py  temp.md  test_dl.py  transcribe.py
experiments/strands/: agent.py  misc.py  notes.md
experiments/timeline/: GamesCalendar.tsx  notes.md
experiments/timeline/data/: szge_match_dates.json
experiments/wiki_mcp/: lol_wiki.py  mcp.md  notes.md
experiments/wiki_mcp/dragontail_data/: item.json  summoner.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  ContributionCalendar.css  ContributionCalendar.tsx  Rotate.tsx
frontend/src/data/: szge_match_dates.json
notes/: aws_notes.md  frontend.md  noob.md  notes.md
