[project]
name = "riothack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "mcp[cli]>=1.14.1",
    "openai>=1.109.1",
    "strands-agents>=1.9.1",
    "strands-agents-builder>=0.1.10",
    "strands-agents-tools>=0.2.8",
    "yt-dlp>=2025.9.23",
]
